samples/_failures_safe/1761443360_0fa952_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ba098f5.c: In function ‘main’:
./samples/SAFE/__tmp_5ba098f5.c:185:42: error: missing terminating ' character
  185 |                     input[--input_len] = '\
      |                                          ^~
./samples/SAFE/__tmp_5ba098f5.c:185:21: error: expected expression at end of input
  185 |                     input[--input_len] = '\
      |                     ^~~~~
./samples/SAFE/__tmp_5ba098f5.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ba098f5.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ba098f5.c:185:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ba098f5.c:185:21: error: expected declaration or statement at end of input
